# session-manager

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/session_manager/: __init__.py  session.py
tests/: test_session.py
